--- a/F1.html
+++ b/F1.html
@@ -257,7 +257,7 @@
 
     // Logout button
     document.getElementById('logoutBtn').addEventListener('click', () => {
-      window.location.href = 'loginCustomer.html';
+      window.location.href = 'index-loginCustomer.html';
     });
 
   </script>
